--- a/index.html
+++ b/index.html
@@ -5,21 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anéis Incríveis</title>
+    <h1 align="center"> Anéis Incríveis </h1> 
     <style>
-        h2{
-            color: #E2A9F3;
+        h1{
+            color: #000000; 
         }
-    </style>
+        h2{
+            color: #4C0B5F;
+        }
+        body{background-color: #A9E2F3; margin: 200px; text-align:}
+      
+</style>
 </head>
 <body>
-  <h1> Anéis </h1>
-    <img src="https://static3.tcdn.com.br/img/img_prod/449226/anel_borboleta_cravejada_prata_925_34333_1_1bc509db89f83838d6834bcc6b2e8a10_20230301023455.jpg" width="400" height="400"> 
-  <h2 color-:>Anel de Boboleta de Zircônias</h2>
+ <section> <h2> Anéis </h2>
+  <hr>
+  <p align="left"> Nesta página, apresentamos anéis para você surpreender aquela pessoa especial com um presente tão especial quanto!
+    Temos diversos modelos disponíveis para que possa procurar nos minímos detalhes seu presente ideal. Além do seu anel vir em uma caixinha de aliança que você pode escolher dentre nossos modelos disponíveis, você ainda pode nos enviar um texto para ir acompanhado na caixinha da embalagem. 
+    O mais legal é que todos estes apetrechos estarão inclusos no valor do anel caso você compre através da nossa <a href="https://instagram.com/sarahcarvalho_88"> página do instagram!</a>
+  </p>
+  <h2> Borboletas Zircônias </h2>
+  <img src="https://static3.tcdn.com.br/img/img_prod/449226/anel_borboleta_cravejada_prata_925_34333_1_1bc509db89f83838d6834bcc6b2e8a10_20230301023455.jpg" width="250" height="250">
   <p>A borboleta é mundialmente conhecida como símbolo da liberdade e da transformação, mesmo sendo um animal pequeno e delicado possui uma resiliência única. Esse anel vai representar a sua força, paciência e capacidade de transformação.</p>
-
-
+ 
   <h2>Anel de Margarida</h2>
-  <p>As flores margaridas representam a juventude, o amor inocente e a sensibilidade. Simbolizando sua pureza, bondade e afeto.</p>
-    <img scr="https://thumbor.cartpanda.com/_hCi9nNW6syfSFqDloCMmM0d7_c=/1024x0/https://assets.mycartpanda.com/static/products_images/xWylTY8bG3mWLt6RmSj2rbTrFvcYmM.jpg" width="400" heigth="400">
+   As flores margaridas simbolizam amor, pureza, paz, inocência, juventude e criatividade. <div>
+   São flores que nos remtem a boas lembranças, representando pureza, bondade, paz, bondade e afeto.
+  <img src="https://cdn.shopify.com/s/files/1/0710/4000/8501/products/KYCeuv65F43KAG3f6eRIp4OMXVdftS_ea52e6c8-6347-4381-84ae-675e417b61be.jpg?v=1676830962&width=1100" width="250" height="250" align="left"> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+  <h2> Anel de Olho de Horus</h2>
+  <p>O Olho de Horus significa poder e proteção, simbolizando força, vigor e segurança. Representa ainda pensamentos e sentimentos, intuição e a capacidade de enxergar um lado espiritual.</p>
+  <img src="https://http2.mlstatic.com/D_NQ_NP_851683-MLB52665529260_112022-O.webp" width="250" height="250">
+
+  <h2> Alianças de Van Gogh "Noite Estrelada"</h2>
+  <p> A aliança com a pintura de Noite Estrelada de Vicent Van Gogh é muito resistente apesar de ser ajustável. O obra do artista retrata a vista da janela de um hospício.</p>
+  <float> 
+    <img align="left" src="https://images.yampi.me/assets/stores/kmundi/uploads/images/aneis-van-gogh-noite-estrelada-ajustavel-613e0c3ec70b6-large.jpeg" width="250" height="250">
+    <img align="middle" src="https://d3ugyf2ht6aenh.cloudfront.net/stores/001/398/953/products/edawdawdawds1-05ae6dbda83c74c26416048879941092-1024-1024.webp" width="250" height="250">
+    <img align=right src="https://magiadafadastore.com.br/img/produtos/120/120_FT_01.jpeg" width="250" height="250">
+
+  </float>
 </body>
 </html>
